added init description

--- a/README.textile
+++ b/README.textile
@@ -7,6 +7,12 @@ h2. Classes
 * SingleLabelTextFieldViewController
 * DoubleLabelTextFieldViewController
 
+h2. Init
+
+%SingleLabelTextFieldViewController* tSingle = [[[SingleLabelTextFieldViewController alloc] initWithTitle:@"Title" label:@"Label" caption:@"caption" text:@"edit me"] autorelease];%
+%tSingle.delegate = self;%
+%[self.navigationController pushViewController:tSingle animated:YES];%
+
 h1. License
 
 This code is published as free open source software. Feel free to fork and contribute.
