let's try escaping the at symbols

--- a/README.textile
+++ b/README.textile
@@ -9,7 +9,7 @@ h2. Classes
 
 h2. Init
 
-%SingleLabelTextFieldViewController* tSingle = [[[SingleLabelTextFieldViewController alloc] initWithTitle:@"Title" label:@"Label" caption:@"caption" text:@"edit me"] autorelease];%
+@SingleLabelTextFieldViewController* tSingle = [[[SingleLabelTextFieldViewController alloc] initWithTitle:\@"Title" label:\@"Label" caption:\@"caption" text:\@"edit me"] autorelease];@
 %tSingle.delegate = self;%
 %[self.navigationController pushViewController:tSingle animated:YES];%
 
