--- a/README.textile
+++ b/README.textile
@@ -9,10 +9,11 @@ h2. Classes
 
 h2. Init
 
-bq.
+<pre>
 SingleLabelTextFieldViewController* tSingle = [[[SingleLabelTextFieldViewController alloc] initWithTitle:@"Title" label:@"Label" caption:@"caption" text:@"edit me"] autorelease];
 tSingle.delegate = self;
 [self.navigationController pushViewController:tSingle animated:YES];
+</pre>
 
 h1. License
 
